# chicken-gate

./: .gitignore  CAMERA_SETUP_PI_ZERO.md  README.md  RESTRUCTURING_SUMMARY.md  SERVICE_FILES_EXPLAINED.md  TAILSCALE_SETUP.md  api.py  check_env.py  chicken-gate-web-port80.service  chicken-gate-web.service  chicken-gate.py  chicken-gate.service  chickengate.service  debug_gate.py  debug_js.py  debug_web_app.py  fix_gpiozero.py  fix_imports.sh  gate.py  install-gate-service.sh  install-web-service.sh  install-web.sh  install.sh  install_rtsp_deps.py  iot.py  main.py  pyproject.toml  quick_camera_test.py  requirements.txt  scan_camera_ports.py  schedule.py  send_gate_cmd.py  setup-port-forwarding.sh  setup.sh  start_system.py  start_webapp.sh  stop_webapp.sh  test_camera.py  test_pi_zero_camera.py  test_pillow.py  (+16 more)
.github/workflows/: tests.yml
docs/: WEB_INTERFACE.md  ci-cd.md  configuration.md  how-to-update-service.md
scripts/: chicken-gate-main  chicken-gate-web  setup-config.sh
src/: api.py  gate.py  gate_cmd.py  gate_drv.py  main.py  schedule.py  suntimes.py  timer.py
src/chicken_gate/: __init__.py
src/chicken_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chicken_gate/gate/: __init__.py  email_me.py  gate.py  gate_drv.py  gate_drv_mock.py  main.py  schedule.py  suntimes.py
src/chicken_gate/shared/: __init__.py  config.py  secret.toml.template
src/chicken_gate/web/: __init__.py  app.py
src/chicken_gate/web/templates/: index.html
static/: manifest.json
systemd/: chicken-gate-web-port80.service  chicken-gate-web.service  chicken-gate.service
templates/: index.html
test/: conftest.py  mock_email.py  test_conftest_integration.py  test_email_config.py  test_gate.py  test_gate_comprehensive.py  test_gate_integration.py  test_timer.py  test_utils.py
