[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chicken-gate"
version = "1.0.0"
description = "Automated chicken gate control system with web interface"
readme = "README.md"
authors = [{ name = "Geoff Dudds", email = "geoff@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "requests>=2.25.0",
    "RPi.GPIO>=0.7.0",
    "suntime>=1.2.0",
    "apscheduler>=3.8.0",
    "toml>=0.10.0",
    "Pillow>=8.0.0",
    "importlib-metadata>=4.0.0",
    "typing-extensions>=3.10.0",
    "astral>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "ruff>=0.1.0", "mypy>=0.910"]
ci = [
    "pytest>=6.0",
    "ruff>=0.1.0",
    "mypy>=0.910",
    "flask>=2.0.0",
    "requests>=2.25.0",
    "suntime>=1.2.0",
    "apscheduler>=3.8.0",
    "toml>=0.10.0",
    "Pillow>=8.0.0",
    "importlib-metadata>=4.0.0",
    "typing-extensions>=3.10.0",
    "astral>=2.2.0",
    # Note: RPi.GPIO excluded for CI compatibility
]

[project.scripts]
chicken-gate-main = "chicken_gate.gate.main:main"
chicken-gate-web = "chicken_gate.web.app:main"

[project.urls]
"Homepage" = "https://github.com/geoffdudds/chicken-gate"
"Repository" = "https://github.com/geoffdudds/chicken-gate"
"Bug Tracker" = "https://github.com/geoffdudds/chicken-gate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "unit: Unit tests that don't require hardware",
    "integration: Integration tests with mock hardware",
    "hardware: Tests that require actual Raspberry Pi hardware",
    "slow: Tests that take a long time to run",
]
